noinst_LIBRARIES = libgui.a
libgui_a_SOURCES =  button.h button.c container.h container.c gui.c gui.h \
		    widget.h widget.c draw.c draw.h label.h label.c frame.h \
		    frame.c scrollbar.h scrollbar.c textbox.c textbox.h \
		    slist.h slist.c style.c style.h thin.c thin.h \
		    progress.c progress.h pixmap.h pixmap.c combol.h combol.c

